2003-02-22  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/glade/account.glade: Increase height of
	  account-hierarchy druid.

2003-02-22  David Hampton  <hampton@employees.org>

	* various: Initial port from the deprecated (in 1.6) guile gh_xxx
	interface to the supported scm_xxx interface.

2003-02-22  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c: Quick fix to avoid
	online transfers being sent to the bank twice.

2003-02-19  Derek Atkins  <derek@ihtfp.com>

	* configure.in: move AS_SCRUB_INCLUDE _before_ tests so it wont
	  fail on gcc 3.2.2 which actually cares.  This is particularly
	  important for AC_CHECK_HEADER(S)

	* configure.in: change the configure help message from
	  "--enable-gui" to "--disable-gui", because the default is
	  enabled.  Also changed "--enable-error-on-warning" for the
	  same reason.
	
2003-02-18  David Hampton  <hampton@employees.org>

	* acconfig.h: 
	* configure.in: Export the guile version number so it can be used
	in the code.  Add new variable for conditionally including the
	SRFI directory when doing 'make check'.  Should be null when using
	guile 1.6.

	* Various Makefile.am files: Use new conditional include for the
	SRFI directory when running 'make check'.

2003-02-17  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-transfer.c: don't round the exchange
	  rate when returning it to callers...  Compute it from the
	  from_amount and to_amount.
	* src/register/ledger-core/split-register.c: change the rate-cell
	  to a shares_print_info so we don't lose accuracy due to rounding
	  errors.
	  Fixes bug #106332

2003-02-16  David Hampton  <hampton@employees.org>

	* src/quotes: List HTML::TableExtract as an explicit requirement,
	since about half of the of Finance::Quote modules require it even
	though F::Q doesn't list it as a dependency.

2003-02-16  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/import-backend.c: fix a bug keeping the code
	  from compiling.
